# perennityai-mediapipe-data-viz

./: MANIFEST.in  README.md  __init__.py  data_visualizer.py  pyproject.toml  requirements.txt  setup.py
configs/: config.ini
data_visualization/: data_visualizer.py
demo/: sample.tfrecord
src/perennityai_viz/: __init__.py  main.py
src/perennityai_viz/data_visualization/: __init__.py  data_visualizer.py
src/perennityai_viz/utils/: __init__.py  tfrecord_processor.py
utils/: __init__.py  csv_handler.py  csv_to_tfrecord_reader.py  tfrecord_reader.py
