

[project]
name = "perennityai-viz"

version = "0.1.0.dev6"  # Developmental release (devN)
description = "A Python tool for visualizing MediaPipe landmark data from CSV, Parquet, and TFRecord formats."
authors = [
    { name = "Perennity AI", email = "info@perennityai.com" }
]
readme = "README.md"
license = { file = "LICENSE" }  # Include a reference to the LICENSE file here
dependencies = [
        'tensorflow>=2.5.0,<=2.17.0', 
        "tensorboard>=2.5.0,<=2.17.0",
        "keras",
        'matplotlib',
        "matplotlib",
        "opencv-python",
        "json5 ",
        "pandas",
        "mediapipe"
]

requires-python = ">=3.8"

keywords = ["mediapipe", "data visualization", "landmarks", "pose", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
"Homepage" = "https://github.com/perennityai/perennityai-viz"
"Documentation" = "https://github.com/perennityai/perennityai-viz/blob/main/README.md"
"Issue Tracker" = "https://github.com/perennityai/perennityai-viz/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"


# Command-line tool entry point
[project.scripts]
visualize-file = "perennityai_viz.main:main"

[tool.setuptools]
packages = ["perennityai_viz"]


